@@ -6,6 +6,8 @@
 
 * Support disabling external file accesses using the external_file_access argument.
 
+* Handle numbering levels defined without an index.
+
 # 1.10.0
 
 * Add "Heading" and "Body" styles, as found in documents created by Apple Pages,
